# gnome-bluetooth

./: .cvsignore  .gitignore  .gitlab-ci.yml  AUTHORS  ChangeLog  ChangeLog.README  HACKING  Makefile.am  NEWS  README  README.md  TODO  acinclude.m4  autogen.sh  bluez-libs.m4  bluez-sdp.m4  configure.ac  configure.in  gnome-bluetooth-1.0.pc.in  gnome-bluetooth.doap  gnome-bluetooth.pc.in  meson.build  meson_options.txt  meson_post_install.py  python-headers.m4  python.m4
applet/: Makefile-lib.am  Makefile.am  agent.c  agent.h  authorisation-dialogue.ui  bluetooth-applet.1  bluetooth-applet.c  bluetooth-applet.desktop.in  bluetooth-applet.desktop.in.in  bluetooth-applet.h  confirm-dialogue.ui  main.c  marshal.list  notify.c  notify.h  obex.c  obex.h  passkey-dialogue.ui  popup-menu.ui  test-agentdialog.c
applet/lib/: Makefile.am  bluetooth-applet.c  bluetooth-applet.h
browse/: Makefile.am  bluetooth-browse.1  main.c
common/: Makefile.am  bluetooth-agent.c  bluetooth-chooser-button.c  bluetooth-chooser.c  bluetooth-chooser.h  bluetooth-client.c  bluetooth-client.h  bluetooth-client.xml  bluetooth-device-selection.c  bluetooth-device-selection.h  bluetooth-enums.h  bluetooth-instance.c  bluetooth-instance.h  bluetooth-instance.xml  bluetooth-killswitch.c  bluetooth-killswitch.h  bluetooth-plugin-manager.c  bluetooth-plugin-manager.h  bluetooth-plugin.h  gnome-bluetooth.symbols  helper.c  helper.h  marshal.list  obex-agent.c  test-client.c  test-deviceselection.c
common/plugins/: Makefile.am  test.c
data/: .cvsignore  Makefile.am  gnome-obex-server.schemas.in
gnome-vfs/: Makefile.am  README  bluetooth-method.c  bluetooth-method.h  bluetooth-modules.conf
help/: ChangeLog  Makefile.am
help/C/: gnome-bluetooth.xml
help/ca/: ca.po
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/el/: el.po
help/es/: es.po
help/fi/: fi.po
help/fr/: fr.po
help/gl/: gl.po
help/hu/: hu.po
help/id/: id.po
help/ko/: ko.po
help/ru/: ru.po
help/sv/: sv.po
help/th/: th.po
help/zh_CN/: zh_CN.po
help/zh_HK/: zh_HK.po
help/zh_TW/: zh_TW.po
icons/: Makefile.am  meson.build
lib/: Makefile.am  bling-spinner.c  bluetooth-agent.c  bluetooth-agent.h  bluetooth-chooser-button.c  bluetooth-chooser-button.h  bluetooth-chooser-combo.c  bluetooth-chooser-combo.h  bluetooth-chooser-private.h  bluetooth-chooser.c  bluetooth-chooser.h  bluetooth-client-glue.c  bluetooth-client-private.h  bluetooth-client.c  bluetooth-client.h  bluetooth-client.xml  bluetooth-device.c  bluetooth-device.h  bluetooth-enums.h  bluetooth-fdo.xml  bluetooth-filter-widget.c  bluetooth-filter-widget.h  bluetooth-hdy-column.c  bluetooth-hdy-column.h  bluetooth-killswitch.c  bluetooth-killswitch.h  bluetooth-pairing-dialog.c  bluetooth-pairing-dialog.h  bluetooth-pairing-dialog.ui  bluetooth-plugin-manager.c  bluetooth-plugin.h  bluetooth-settings-obexpush.c  bluetooth-settings-obexpush.h  bluetooth-settings-row.c  bluetooth-settings-row.h  bluetooth-settings-row.ui  bluetooth-settings-widget.c  bluetooth-settings-widget.h  bluetooth-settings.css  bluetooth-utils.c  (+29 more)
lib/plugins/: Makefile.am  geoclue.c  test.c
libegg/: .cvsignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.in
libegg/libegg/: .cvsignore  Makefile.am
moblin/: Makefile.am  bluetooth-panel.desktop.in.in  bluetooth-powerswitch.c  bluetooth-powerswitch.h  com.meego.UX.Shell.Panels.bluetooth.service.in  main.c  moblin-panel.c  moblin-panel.h  org.moblin.UX.Shell.Panels.bluetooth.service.in  pin.ui
moblin/theme/: Makefile.am  (+1 more)
nautilus/: .cvsignore  GNOME_Bluetooth_Component.server.in.in  Makefile.am  gnome-bluetooth-component.c  gnome-bluetooth-component.h  libmain.c
obex/: .cvsignore  Makefile.am  chooser.c  chooser.h  gnome-obex-send.c  gnome-obex-server.c  gnome-obex-server.desktop.in  obex-server-source-private.h  obex-server-source-test.c  obex-server-source.c  obex-server-source.h  obex_io.c  obex_io.h  obex_put_common.c  obex_test.h  obex_test_client.c  obex_test_client.h  obex_test_server.c  obex_test_server.h  obexsdp.c  obexsdp.h  sender.c  servonly.c  util.c  util.h
orbit/: .cvsignore  Makefile.am
pixmaps/: Makefile.am  blueradio.xcf
properties/: Makefile.am  adapter.c  bluetooth-manager.schemas.in  bluetooth-properties.1  bluetooth-properties.desktop.in  bluetooth-properties.desktop.in.in  bluetooth.ui  cc-bluetooth-panel.c  cc-bluetooth-panel.h  gconf-bridge.c  gconf-bridge.h  general.c  general.h  gnome-bluetooth  killswitch.c  killswitch.h  main.c  org.gnome.Bluetooth.gschema.xml.in  properties-adapter.ui  service.c  service.h
python/: .cvsignore  Makefile.am  __init__.py  defs.py  gnome-bluetooth-manager  gnome-bluetooth-manager.desktop.in  gnome-bluetooth-manager.in  gtkobject-support.c  hig_alert.py  iconlist.defs  iconlist.override  iconlistmodule.c  manager.py  pyegg-private.h  testiconlist.py
sendto/: Makefile.am  bluetooth-sendto.1  bluetooth-sendto.desktop.in  bluetooth-sendto.desktop.in.in  gnome-bluetooth-nst  main.c  meson.build  nautilus-sendto-plugin.c  obex-agent.c  org.gnome.Bluetooth.nst.gschema.xml.in
src/: .cvsignore  GNOME_Bluetooth_Manager.idl  GNOME_Bluetooth_Manager.server.in.in  Makefile.am  btadmin.c  btadmin.h  chooser.gob  controller.gob  fileactiondialog.gob  gconftest.c  gnomebt-chooser-pymodule.c  gnomebt-chooser-test.c  gnomebt-chooser.defs  gnomebt-chooser.override  gnomebt-controller-pymodule.c  gnomebt-controller-test.c  gnomebt-controller.defs  gnomebt-controller.override  gnomebt-fileactiondialog-test.c  gnomebt-icons.c  gnomebt-icons.h  gnomebt-permissiondialog-test.c  main.c  manager-client.c  manager-impl.c  manager.c  manager.h  permissiondialog.gob  spinner-test.c  spinner.gob
tests/: integration-test  integration-test-skipped.sh  integration-test.py  meson.build  test-bluetooth-device.c  test-bluetooth-utils.c  test_battery.c  unittest_inspector.py
wizard/: Makefile.am  TEST-PROCEDURE.txt  bluetooth-input.c  bluetooth-wizard.desktop.in.in  main.c  passkey-options.ui  pin-code-database.txt  pin-code-database.xml  pin.c  pin.h  wizard.ui
(+154 files in other folders)
