include $(top_srcdir)/gnome-doc-utils.make
dist-hook: doc-dist-hook
DOC_MODULE = gnome-bluetooth
DOC_ENTITIES = legal.xml
DOC_H_DOCS = C/gnome-bluetooth.xml
DOC_INCLUDES = 
DOC_FIGURES = \
	figures/bluetooth-applet.png		\
	figures/bluetooth-properties.png	\
	figures/bluetooth-wizard.png
	
DOC_LINGUAS = cs da de el es fi fr hu ru sv th zh_CN
